--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "reactstrap": "^9.2.0",
     "redux-logger": "^3.0.6",
     "remixicon": "^3.5.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
